# neat_gru_bug

./: .gitignore  CMakeLists.txt  README
argos_params/: no_walls.argos  no_walls_10.argos  no_walls_10_vis.argos  no_walls_vis.argos
broken_genomes/: broke_fella
debug/: debug0.txt  debug1.txt  debug2.txt  debug3.txt  debug4.txt  debug5.txt  debug_par0.txt  debugtyner_0.txt
eval_set_scores/: eval_scores.txt
lib/NEAT_GRU/: CMakeLists.txt
lib/aiTools/: Makefile  aiTools.pro  aiTools.sln
lib/bimatrix_solver_mod/: solve_game.py
matlab/: ASTARPATH.m  G89_lengths  astar_on_environment.m  astar_on_environment.m~  ibug_lengths  path_performance.m  path_performance.m~
neat_params/: ap_21_na.ne  neatgrubug.ne  seqclassgru.ne  test.ne  test2.ne  test3.ne  test_nb.ne
neat_params/archive_params/: ap_1.ne  ap_10.ne  ap_11.ne  ap_12.ne  ap_13.ne  ap_14.ne  ap_15.ne  ap_16.ne  ap_17.ne  ap_19.ne  ap_2.ne  ap_20.ne  ap_21.ne  ap_22.ne  ap_23.ne  ap_24.ne  ap_25.ne  ap_26.ne  ap_3.ne  ap_38.ne  ap_39.ne  ap_4.ne  ap_5.ne  ap_6.ne  ap_7.ne  ap_8.ne  ap_9.ne
neat_params/archive_params_fixed_training_set/: ap_27.ne  ap_28.ne  ap_29.ne  ap_30.ne  ap_31.ne  ap_32.ne  ap_33.ne  ap_34.ne  ap_35.ne  ap_36.ne  ap_37.ne
neat_params/archive_params_nb/: ap_2_nb.ne  ap_3_nb.ne  ap_4_nb.ne  ap_5_nb.ne  test.ne
scores/: .training_scores.txt.swp  eval_scores.txt  training_scores.txt
scores/training_scores/: training_scores.txt
scripts/: analyse_ns_scores.sh  clear_winners.sh  read_eval_scores.sh  score_analysis.py  score_analysis_avg_eval.py  score_analysis_avg_training.py  score_analysis_avg_training_no_bearing.py  score_analysis_eval.py  score_analysis_training.py  transfer_scores.sh
src/: data_collection.cpp  data_collection.h  ga.cpp  ga.h  individual_run.cpp  individual_run.h  main.cpp  nash_averaging.cpp  nash_averaging.h  shared_memory.cpp  shared_memory.h
src/argos/: CMakeLists.txt
src/argos/src/: argos_simulation.cpp  argos_simulation.h
src/argos/src/controllers/: CMakeLists.txt  empty_controller.cpp  empty_controller.h  neat_gru_footbot.cpp  neat_gru_footbot.h  neat_gru_footbot_controller.cpp  neat_gru_footbot_controller.h
src/argos/src/loop_functions/: CMakeLists.txt  environment_generator.cpp  environment_generator.h  fitness_score.cpp  fitness_score.h  kim_environment_generator.cpp  kim_environment_generator.h  master_loop_function.cpp  master_loop_function.h  trajectory_logger.cpp  trajectory_logger.h
src/argos/src/loop_functions/environment/: environment_builder.cpp  environment_builder.h  environment_generator.cpp  environment_generator.h  kim_environment_generator.cpp  kim_environment_generator.h
src/argos/src/loop_functions/fitness/: astar_on_env.cpp  astar_on_env.h  fitness_score.cpp  fitness_score.h  search_grid_wrapper.cpp  search_grid_wrapper.h  search_node_comparator.cpp  search_node_comparator.h  trajectory_logger.cpp  trajectory_logger.h
starting_genomes/: g44  generate_start_genome.sh  start_genome
trajectories_temp/i_bug_2_trajectories/: trajectory_1.txt  trajectory_10.txt  trajectory_100.txt  trajectory_101.txt  trajectory_102.txt  trajectory_103.txt  trajectory_104.txt  trajectory_105.txt  trajectory_106.txt  trajectory_107.txt  trajectory_108.txt  trajectory_109.txt  trajectory_11.txt  trajectory_110.txt  trajectory_111.txt  trajectory_112.txt  trajectory_113.txt  trajectory_115.txt  trajectory_116.txt  trajectory_117.txt  trajectory_118.txt  trajectory_119.txt  trajectory_12.txt  trajectory_120.txt  trajectory_121.txt  trajectory_122.txt  trajectory_123.txt  trajectory_124.txt  trajectory_125.txt  trajectory_126.txt  trajectory_127.txt  trajectory_128.txt  trajectory_129.txt  trajectory_13.txt  trajectory_130.txt  trajectory_131.txt  trajectory_132.txt  trajectory_133.txt  trajectory_134.txt  trajectory_135.txt  (+156 more)
trajectories_temp/kims_envs_lengths/: kims_envs_lengths.txt
winners/: cool_genome  eval_winner_3_at_gen_175  g1  g10  g11  g16  g17  g3  g6  g8  g9  old_winner_g61  overall_winner  overall_winner_at_166  overall_winner_at_333  overall_winner_at_500  overall_winner_org  overall_winner_org_at_166  overall_winner_org_at_333  overall_winner_org_at_500
winners/ap_31/: eval_winner_0_at_gen_350  eval_winner_1_at_gen_325  eval_winner_1_at_gen_825  eval_winner_2_at_gen_325  eval_winner_2_at_gen_800  eval_winner_2_at_gen_850  eval_winner_4_at_gen_325
winners/archive_winners/: g12  g13  g14  g15  g18  g19  g2  g20  g21  g22  g23  g24  g25  g26  g27  g28  g29  g30  g31  g32  g33  g34  g35  g36  g37  g38  g39  g4  g40  g41  g42  g43  g44  g45  g46  g47  g47_mod  g5  g7
winners/archive_winners_fw/: g53  g57  g58  g59  g60  g61  g62  g63
winners/archive_winners_nb/: g1  g10  g11  g12  g13  g14  g15  g16  g17  g18  g19  g20  g21  g22  g23  g24  g25  g26  g27  g28  g29  g3  g30  g31  g32  g4  g5  g6  g7  g8  g9
winners/archive_winners_new_chapter/: g10  g64  g65  g66  g67  g68  g69  g70  g71  g72_sig_bug  g73_sig_bug  g74_sig_bug  g75  g76  g77  g78  g79  g80  g81  g83  g84  g85  g86  g87  g88  g89
winners/archive_winners_rand_envs/: g48  g49  g50  g51  g52  g54  g55  g56
winners/eval_winners/: eval_winner_ns_0_at_gen_1  eval_winner_ns_0_at_gen_2  eval_winner_ns_10_at_gen_1  eval_winner_ns_11_at_gen_1  eval_winner_ns_12_at_gen_1  eval_winner_ns_13_at_gen_1  eval_winner_ns_14_at_gen_1  eval_winner_ns_15_at_gen_1  eval_winner_ns_16_at_gen_1  eval_winner_ns_17_at_gen_1  eval_winner_ns_18_at_gen_1  eval_winner_ns_19_at_gen_1  eval_winner_ns_1_at_gen_1  eval_winner_ns_20_at_gen_1  eval_winner_ns_21_at_gen_1  eval_winner_ns_22_at_gen_1  eval_winner_ns_23_at_gen_1  eval_winner_ns_24_at_gen_1  eval_winner_ns_25_at_gen_1  eval_winner_ns_26_at_gen_1  eval_winner_ns_27_at_gen_1  (+69 more)
(+634 files in other folders)
